# ugc_sprint_1

./: .gitignore  README.md  pyproject.toml
etl/: .env_example  Dockerfile  config.py  main.py  pyproject.toml  requirement.txt  requirements.txt
etl/app/: config.py  decorators.py  main.py
receiver/: .env_example  Dockerfile  requirements.txt
receiver/src/: main.py
receiver/src/api/v1/: receiver.py
receiver/src/core/: config.py
receiver/src/db/: kafka.py
src/api/v1/: model.py  receiver.py
src/core/: config.py
