[tool.poetry]
name = "ugc-sprint-1"
version = "0.1.0"
description = ""
authors = ["mishastik78 <mishastik78@yande.ru>"]
readme = "README.md"
packages = [{include = "ugc_sprint_1"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.85.1"
httpx = "^0.23.0"
aiokafka = "^0.7.2"
python-dotenv = "^0.21.0"
uvicorn = "^0.19.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
